# oss-agent-lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
000-docs/: 001-PP-PROD-product-requirements-doc.md  002-PP-PLAN-implementation-roadmap.md  003-AT-ARCH-conductor-router-specialists.md  004-AT-DSGN-specialist-inventory.md  005-RL-RSRC-march-2026-trending-repos.md  006-RL-PROP-bobs-brain-oss-comparison.md  007-DR-STND-skill-md-template-standard.md  008-PP-PLAN-governance-policy.md  009-OD-DEPL-local-first-deployment-guide.md  010-OD-SOPS-audit-harness-baseline-2026-05-01.md
agents/conductor/: agent.py
agents/contracts/: __init__.py
agents/memory/: session.py
agents/router/: agent.py  registry.py
agents/specialists/_template/: README.md  SKILL.md  agent.py  tools.py
agents/specialists/autoresearch/: SKILL.md  agent.py  tools.py
agents/specialists/browser_ai/: SKILL.md  (+2 more)
scoring/: index.py  scorer.py  thresholds.py
scoring/sources/: devhunt.py  github_trending.py  hackernews.py  ossinsight.py  reddit.py  therundown.py  trendshift.py
scripts/: generate_outputs.py  generate_specialist.py  sync_github_projects.py
src/oss_agent_lab/: __init__.py  __main__.py  base.py  cli.py  contracts.py
tests/: conftest.py  helpers.py  test_base.py  test_conductor.py  test_contracts.py  test_e2e_orchestration.py  test_generate_outputs.py  test_registry.py  test_repo_scanner.py  test_scoring.py  test_scoring_sources.py  test_session.py  test_specialists_all.py  test_specialists_v1.py
(+24 files in other folders)
